<resources>
    <string name="app_name">VentasApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Product Name</string>
    <string name="trademark">TradeMark</string>
    <string name="price">Price</string>
    <string name="Stock">Stock</string>
    <string name="btn">Confirm Order</string>
    <string name="number">Number</string>
    <string name="sale">Sale COde</string>
    <string name="code">Sale Code</string>
    <string name="total">Sale Total Price</string>
    <string name="date">Sale Date</string>
</resources>