<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="1dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:id="@+id/card_item">

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#49000000"/>

    <RelativeLayout
        android:padding="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/productName"
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/productMark"
            android:layout_below="@id/productName"
            android:text="@string/trademark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/productPrice"
            android:layout_below="@id/productMark"
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/productStock"
            android:layout_below="@id/productMark"
            android:text="@string/Stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>