<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="15dp"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:id="@+id/saleCard">

    <TextView
        android:id="@+id/saleDate"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginStart="20dp"/>

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/saleCode"
            android:text="@string/code"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/saleTotal"
            android:layout_below="@id/saleCode"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>